# simple_qt_widgets

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  main.cpp
